# ncmatrix

./: .gitignore  CMakeLists.txt  DESIGN.md  PLAN.md  RAIN.md  README.md  matrix.toml
assets/chars/: numbers.txt
docs/: FALLING.md  RAIN.md  TITLE.md  TITLE_V2.md
src/cli/: ConfigLoader.cpp  ConfigLoader.h  main.cpp
src/effects/: DemoEffect.h  RainAndConvergeEffect.cpp  RainAndConvergeEffect.h  RainEffect.cpp  RainEffect.h
src/engine/: Context.h  Effect.h  Engine.cpp  Engine.h  Renderer.cpp  Renderer.h
src/utils/: Utf8.h
